--- a/source/css/patternfly.css
+++ b/source/css/patternfly.css
@@ -2561,94 +2561,166 @@
   border: 2px solid #39a5dc;
   border-radius: 50%; }
 
-/* http://overpassfont.org/ */
-/* Webfont: Overpass-Bold */
+/**
+* Copyright 2016 Red Hat, Inc
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+*     http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
+/*
+ * Fonts
+ *
+ * PatternFly uses Overpass and Overpass mono http://overpassfont.org/
+ */
 @font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-Bold.eot");
+  font-family: 'overpass';
+  src: url("../fonts/overpass-thin.eot");
   /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-Bold.woff") format("woff"), url("../fonts/Overpass-Bold.ttf") format("truetype"), url("../fonts/Overpass-Bold.svg#Overpass-Bold") format("svg");
-  /* Legacy iOS */
-  font-style: normal;
-  font-weight: 700;
-  text-rendering: optimizeLegibility; }
+  src: url("../fonts/overpass-thin.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-thin.woff2") format("woff2"), url("../fonts/overpass-thin.woff") format("woff"), url("../fonts/overpass-thin.ttf") format("truetype");
+  /* Safari, Android, iOS */
+  font-weight: 200;
+  font-style: normal; }
 
-/* Webfont: Overpass-BoldItalic */
 @font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-Bold-Italic.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-Bold-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-Bold-Italic.woff") format("woff"), url("../fonts/Overpass-Bold-Italic.ttf") format("truetype"), url("../fonts/Overpass-Bold-Italic.svg#Overpass-BoldItalic") format("svg");
-  /* Legacy iOS */
-  font-style: italic;
-  font-weight: 700;
-  text-rendering: optimizeLegibility; }
+  font-family: 'overpass';
+  src: url("../fonts/overpass-thin-italic.eot");
+  src: url("../fonts/overpass-thin-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-thin-italic.woff2") format("woff2"), url("../fonts/overpass-thin-italic.woff") format("woff"), url("../fonts/overpass-thin-italic.ttf") format("truetype");
+  font-weight: 200;
+  font-style: italic; }
 
-/* Webfont: Overpass-Reg */
 @font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-Regular.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-Regular.woff") format("woff"), url("../fonts/Overpass-Regular.ttf") format("truetype"), url("../fonts/Overpass-Regular.svg#Overpass-Regular") format("svg");
-  /* Legacy iOS */
-  font-style: normal;
-  font-weight: 600;
-  text-rendering: optimizeLegibility; }
-
-/* Webfont: Overpass-Italic */
-@font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-Italic.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-Italic.woff") format("woff"), url("../fonts/Overpass-Italic.ttf") format("truetype"), url("../fonts/Overpass-Italic.svg#Overpass-Italic") format("svg");
-  /* Legacy iOS */
-  font-style: italic;
-  font-weight: 600;
-  text-rendering: optimizeLegibility; }
-
-/* Webfont: Overpass-Light */
-@font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-Light.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-Light.woff") format("woff"), url("../fonts/Overpass-Light.ttf") format("truetype"), url("../fonts/Overpass-Light.svg#Overpass-Light") format("svg");
-  /* Legacy iOS */
-  font-style: normal;
-  font-weight: normal;
-  text-rendering: optimizeLegibility; }
-
-/* Webfont: Overpass-LightItalic */
-@font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-Light-Italic.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-Light-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-Light-Italic.woff") format("woff"), url("../fonts/Overpass-Light-Italic.ttf") format("truetype"), url("../fonts/Overpass-Light-Italic.svg#Overpass-LightItalic") format("svg");
-  /* Legacy iOS */
-  font-style: italic;
-  font-weight: normal;
-  text-rendering: optimizeLegibility; }
-
-/* Webfont: Overpass-ExtraLight */
-@font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-ExtraLight.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-ExtraLight.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-ExtraLight.woff") format("woff"), url("../fonts/Overpass-ExtraLight.ttf") format("truetype"), url("../fonts/Overpass-ExtraLight.svg#Overpass-ExtraLight") format("svg");
-  /* Legacy iOS */
-  font-style: normal;
+  font-family: 'overpass';
+  src: url("../fonts/overpass-extralight.eot");
+  src: url("../fonts/overpass-extralight.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-extralight.woff2") format("woff2"), url("../fonts/overpass-extralight.woff") format("woff"), url("../fonts/overpass-extralight.ttf") format("truetype");
   font-weight: 300;
-  text-rendering: optimizeLegibility; }
+  font-style: normal; }
 
-/* Webfont: Overpass-ExtraLightItalic */
 @font-face {
-  font-family: "Overpass";
-  src: url("../fonts/Overpass-ExtraLight-Italic.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/Overpass-ExtraLight-Italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Overpass-ExtraLight-Italic.woff") format("woff"), url("../fonts/Overpass-ExtraLight-Italic.ttf") format("truetype"), url("../fonts/Overpass-ExtraLight-Italic.svg#Overpass-ExtraLightItalic") format("svg");
-  /* Legacy iOS */
-  font-style: italic;
+  font-family: 'overpass';
+  src: url("../fonts/overpass-extralight-italic.eot");
+  src: url("../fonts/overpass-extralight-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-extralight-italic.woff2") format("woff2"), url("../fonts/overpass-extralight-italic.woff") format("woff"), url("../fonts/overpass-extralight-italic.ttf") format("truetype");
   font-weight: 300;
-  text-rendering: optimizeLegibility; }
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-light.eot");
+  src: url("../fonts/overpass-light.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-light.woff2") format("woff2"), url("../fonts/overpass-light.woff") format("woff"), url("../fonts/overpass-light.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-light-italic.eot");
+  src: url("../fonts/overpass-light-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-light-italic.woff2") format("woff2"), url("../fonts/overpass-light-italic.woff") format("woff"), url("../fonts/overpass-light-italic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-regular.eot");
+  src: url("../fonts/overpass-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-regular.woff2") format("woff2"), url("../fonts/overpass-regular.woff") format("woff"), url("../fonts/overpass-regular.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-regular-italic.eot");
+  src: url("../fonts/overpass-regular-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-regular-italic.woff2") format("woff2"), url("../fonts/overpass-regular-italic.woff") format("woff"), url("../fonts/overpass-regular-italic.ttf") format("truetype");
+  font-weight: 500;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-semibold.eot");
+  src: url("../fonts/overpass-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-semibold.woff2") format("woff2"), url("../fonts/overpass-semibold.woff") format("woff"), url("../fonts/overpass-semibold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-semibold-italic.eot");
+  src: url("../fonts/overpass-semibold-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-semibold-italic.woff2") format("woff2"), url("../fonts/overpass-semibold-italic.woff") format("woff"), url("../fonts/overpass-semibold-italic.ttf") format("truetype");
+  font-weight: 600;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-bold.eot");
+  src: url("../fonts/overpass-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-bold.woff2") format("woff2"), url("../fonts/overpass-bold.woff") format("woff"), url("../fonts/overpass-bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-bold-italic.eot");
+  src: url("../fonts/overpass-bold-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-bold-italic.woff2") format("woff2"), url("../fonts/overpass-bold-italic.woff") format("woff"), url("../fonts/overpass-bold-italic.ttf") format("truetype");
+  font-weight: 700;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-extrabold.eot");
+  src: url("../fonts/overpass-extrabold.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-extrabold.woff2") format("woff2"), url("../fonts/overpass-extrabold.woff") format("woff"), url("../fonts/overpass-extrabold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-extrabold-italic.eot");
+  src: url("../fonts/overpass-extrabold-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-extrabold-italic.woff2") format("woff2"), url("../fonts/overpass-extrabold-italic.woff") format("woff"), url("../fonts/overpass-extrabold-italic.ttf") format("truetype");
+  font-weight: 800;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-heavy.eot");
+  src: url("../fonts/overpass-heavy.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-heavy.woff2") format("woff2"), url("../fonts/overpass-heavy.woff") format("woff"), url("../fonts/overpass-heavy.ttf") format("truetype");
+  font-weight: 900;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass';
+  src: url("../fonts/overpass-heavy-italic.eot");
+  src: url("../fonts/overpass-heavy-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-heavy-italic.woff2") format("woff2"), url("../fonts/overpass-heavy-italic.woff") format("woff"), url("../fonts/overpass-heavy-italic.ttf") format("truetype");
+  font-weight: 900;
+  font-style: italic; }
+
+@font-face {
+  font-family: 'overpass-mono';
+  src: url("../fonts/overpass-mono-light.eot");
+  src: url("../fonts/overpass-mono-light.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-mono-light.woff2") format("woff2"), url("../fonts/overpass-mono-light.woff") format("woff"), url("../fonts/overpass-mono-light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass-mono';
+  src: url("../fonts/overpass-mono-regular.eot");
+  src: url("../fonts/overpass-mono-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-mono-regular.woff2") format("woff2"), url("../fonts/overpass-mono-regular.woff") format("woff"), url("../fonts/overpass-mono-regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass-mono';
+  src: url("../fonts/overpass-mono-semibold.eot");
+  src: url("../fonts/overpass-mono-semibold.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-mono-semibold.woff2") format("woff2"), url("../fonts/overpass-mono-semibold.woff") format("woff"), url("../fonts/overpass-mono-semibold.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal; }
+
+@font-face {
+  font-family: 'overpass-mono';
+  src: url("../fonts/overpass-mono-bold.eot");
+  src: url("../fonts/overpass-mono-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/overpass-mono-bold.woff2") format("woff2"), url("../fonts/overpass-mono-bold.woff") format("woff"), url("../fonts/overpass-mono-bold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal; }
 
 /*! normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
 html {
